--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,11 +1,16 @@
 !!!
 %html
   %head
-    %meta{:content => "text/html; charset=UTF-8", "http-equiv" => "Content-Type"}/
+    %meta{ content: 'text/html; charset=UTF-8',
+    'http-equiv': 'Content-Type' }/
+    %meta{ content: 'width=device-width, initial-scale=1',
+    name: 'viewport' }/
     %title RailsTemplate
     = csrf_meta_tags
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = stylesheet_link_tag    params[:controller], media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag    'application', media: 'all',
+    'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag    params[:controller], media: 'all',
+    'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   %body
     = yield
