--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     'http-equiv': 'Content-Type' }/
     %meta{ content: 'width=device-width, initial-scale=1',
     name: 'viewport' }/
-    %title FormSub
+    %title Zaki
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all',
     'data-turbolinks-track': 'reload'
