--- a/app/views/trials/show.html.haml
+++ b/app/views/trials/show.html.haml
@@ -4,6 +4,6 @@
   %b Title:
   = @trial.title
 
-= link_to 'Edit', edit_trial_path(@trial)
+= link_to 'Edit', edit_committee_trial_path(@committee, @trial)
 \|
-= link_to 'Back', trials_path
+= link_to 'Back', committee_trials_path(@committee)
