--- a/app/views/trials/edit.html.haml
+++ b/app/views/trials/edit.html.haml
@@ -4,4 +4,4 @@
 
 = link_to 'Show', [@committee, @trial]
 \|
-= link_to 'Back', committee_trials_path(@committee)
+= link_to 'All trials', committee_trials_path(@committee)
