--- a/app/views/trials/new.html.haml
+++ b/app/views/trials/new.html.haml
@@ -2,4 +2,4 @@
 
 = render 'form', trial: @trial
 
-= link_to 'Back', committee_trials_path(@committee)
+= link_to 'All trials', committee_trials_path(@committee)
