--- a/app/views/trials/show.html.haml
+++ b/app/views/trials/show.html.haml
@@ -6,4 +6,4 @@
 
 = link_to 'Edit', edit_committee_trial_path(@committee, @trial)
 \|
-= link_to 'Back', committee_trials_path(@committee)
+= link_to 'All trials', committee_trials_path(@committee)
