--- a/app/views/trials/show.html.haml
+++ b/app/views/trials/show.html.haml
@@ -1,8 +1,14 @@
 %p#notice= notice
 
+%h1= @trial.title
+%h2= @trial.committee.name
+
 %p
-  %b Title:
-  = @trial.title
+  %b Deadline:
+  = @trial.deadline
+%p
+  %b Status:
+  = @trial.status
 
 = link_to 'Edit', edit_committee_trial_path(@committee, @trial)
 \|
