--- a/app/views/trials/index.html.haml
+++ b/app/views/trials/index.html.haml
@@ -1,23 +1,26 @@
 %h1 Listing trials
 %h2= @committee.name
 
-%table
-  %thead
-    %tr
-      %th Title
-      %th
-      %th
-      %th
+- if @trials.empty?
+  %h3 No trials yet
+= render 'trials_table', trials: @trials.overdue_soon, committee: @committee,
+header: 'Soon overdue !!! (one month)', hide_options: true
 
-  %tbody
-    - @trials.each do |trial|
-      %tr
-        %td= trial.title
-        %td= link_to 'Show', [@committee, trial]
-        %td= link_to 'Edit', edit_committee_trial_path(@committee, trial)
-        %td= link_to 'Destroy', [@committee, trial], method: :delete,
-        data: { confirm: 'Are you sure?' }
+= render 'trials_table', trials: @trials.ongoing, committee: @committee,
+header: 'Ongoing'
+
+= render 'trials_table', trials: @trials.overdue, committee: @committee,
+header: 'Overdue'
+
+= render 'trials_table', trials: @trials.rejected, committee: @committee,
+header: 'Rejected'
+
+= render 'trials_table', trials: @trials.accepted, committee: @committee,
+header: 'Accepted'
 
 %br
 
-= link_to 'New trial', new_committee_trial_path(@committee)
+= link_to 'New trial', new_committee_trial_path(@committee),
+class: 'btn btn-primary'
+%br
+= link_to 'Show Committee (back)', @committee
