--- a/app/views/committees/show.html.haml
+++ b/app/views/committees/show.html.haml
@@ -1,11 +1,9 @@
 %p#notice= notice
 
-%h1= @committee.name
-%h2 Number of trials: #{@committee.trials.count}
+%p
+  %b Name:
+  = @committee.name
 
-= link_to 'All Trials', committee_trials_path(@committee)
-%br
-- if current_user.present?
-  = link_to 'Edit committee', edit_committee_path(@committee)
-  \|
-= link_to 'All committees', committees_path
+= link_to 'Edit', edit_committee_path(@committee)
+\|
+= link_to 'Back', committees_path
