--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -2,7 +2,10 @@
   %h1 Welcome
   %p
     Username: #{current_user.email}
-  %p= link_to 'Private page', home_private_index_path
-  %p= link_to 'Logout', logout_path, method: :delete
+  .btn-group
+    = link_to 'Private page', home_private_index_path,
+    class: 'btn btn-secondary'
+    = link_to 'Committees', committees_path, class: 'btn btn-primary'
+    = link_to 'Logout', logout_path, method: :delete, class: 'btn btn-danger'
 - else
-  = link_to 'sign in', '/auth/sso'
+  = link_to 'sign in', '/auth/sso', class: 'btn btn-success'
