--- a/app/views/trials/new.html.haml
+++ b/app/views/trials/new.html.haml
@@ -2,4 +2,8 @@
 
 = render 'form', trial: @trial
 
-= link_to 'All trials', committee_trials_path(@committee)
+- if current_user.present?
+  = link_to 'All trials', committee_trials_path(@committee)
+- else
+  = link_to @committee.name, committee_path(@committee),
+  class: 'btn btn-primary'
