--- a/app/views/committees/edit.html.haml
+++ b/app/views/committees/edit.html.haml
@@ -1,7 +1,9 @@
-%h1 Editing committee
+.row.second-bar
+  = render template: 'shared/breadcrumbs', locals: { final_title: 'Show' }
 
-= render 'form', committee: @committee
+.row
+  .col-md-4.offset-md-4
+    .ls60
+    = render 'form', committee: @committee
 
-= link_to 'Show', @committee
-\|
-= link_to 'All committees', committees_path
+    = link_to 'Back', committees_path, class: 'btn btn-secondary'
