--- a/app/views/committees/index.html.haml
+++ b/app/views/committees/index.html.haml
@@ -1,22 +1,25 @@
-%h1 Listing committees
+.row.second-bar
+  = render template: 'shared/breadcrumbs',
+  locals: { final_title: 'Listing Committees' }
 
-%table
+  = render 'shared/additional_menu' do
+    = link_to new_committee_path,
+    class: 'nav-link btn btn-success' do
+      %i.fa.fa-plus-square-o
+      %span New Committee
+
+%table.table
   %thead
     %tr
       %th Name
-      %th
       %th
       %th
 
   %tbody
     - @committees.each do |committee|
       %tr
-        %td= committee.name
-        %td= link_to 'Show', committee
-        %td= link_to 'Edit', edit_committee_path(committee)
-        %td= link_to 'Destroy', committee,
+        %td= link_to committee.name, committee
+        %td= link_to 'Edit', edit_committee_path(committee),
+        class: 'btn btn-secondary'
+        %td= link_to 'Destroy', committee, class: 'btn btn-warning',
         method: :delete, data: { confirm: 'Are you sure?' }
-
-%br
-
-= link_to 'New Committee', new_committee_path
