--- a/app/views/trials/_form.html.haml
+++ b/app/views/trials/_form.html.haml
@@ -1,4 +1,6 @@
 = form_for [@committee, trial] do |f|
+  - if params[:redirect_url].present?
+    = f.hidden_field(:referer, value: params[:redirect_url])
   - if trial.errors.any?
     #error-explanation
       %h2
@@ -8,32 +10,41 @@
         - trial.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = f.label :title
-    = f.text_field :title
-  .field
-    = f.label :deadline
-    = f.date_select :deadline, discard_day: true
-  - unless action_name == 'new'
-    - if current_user.present?
-      .field
-        = f.label :status
-        = f.select :status, Trial::STATUSES
-  .field
-    = f.label :email
-    = f.text_field :email
-  .field
-    = f.label :phone_number
-    = f.text_field :phone_number
-  .field
-    = f.label :supervisor
-    = f.text_field :supervisor
-  .field
-    = f.label :environment
-    = f.text_field :environment
-  - if trial.private_key_digest.blank?
-    .field
-      = f.label :private_key
-      = f.text_field :private_key
-  .actions
-    = f.submit 'Save', class: 'btn btn-success'
+  .row
+    .col-md-6.col-sm-11
+      .container
+        .field.form-group
+          = f.label :title
+          = f.text_field :title, class: 'form-control'
+        .field.form-group
+          = f.label :deadline
+          %div= f.date_select :deadline,
+          { discard_day: true, with_css_classes: true },
+          class: 'custom-select form-control mb-3 mr-sm-1 mb-sm-3'
+        - unless action_name == 'new'
+          - if current_user.present?
+            .field.form-group
+              = f.label :status
+              = f.select :status, Trial::STATUSES, {}, class: 'form-control'
+        .field.form-group
+          = f.label :email
+          = f.text_field :email, class: 'form-control'
+        .field.form-group
+          = f.label :phone_number
+          = f.text_field :phone_number, class: 'form-control'
+    .col-md-6.col-sm-11
+      .container
+        .field.form-group
+          = f.label :supervisor
+          = f.text_field :supervisor, class: 'form-control'
+        .field.form-group
+          = f.label :environment
+          = f.text_field :environment, class: 'form-control'
+        - if trial.private_key_digest.blank?
+          .field.form-group
+            = f.label :private_key
+            = f.text_field :private_key, class: 'form-control'
+        .actions.btn-group.d-block
+          = link_to 'Back', params[:redirect_url] || :back,
+          class: 'btn btn-secondary btn-inline-block col-6 float-left'
+          = f.submit 'Save', class: 'btn btn-success btn-inline-block col-6'
