--- a/app/views/trials/edit.html.haml
+++ b/app/views/trials/edit.html.haml
@@ -1,8 +1,5 @@
-%h1 Editing trial
+.row.second-bar
+  = render template: 'shared/breadcrumbs', locals: { final_title: 'Edit trial' }
 
-= render 'form', trial: @trial
-
-= link_to 'Show', [@committee, @trial], class: 'btn btn-primary'
-- if current_user.present?
-  \|
-  = link_to 'All trials', committee_trials_path(@committee)
+.row
+  = render 'form', trial: @trial
